# PolarRectification

./: CMakeLists.txt  README.md
src/: c_polar_stereo_rectification.cc  c_polar_stereo_rectification.h  main.cc
test-images/2011_09_26_drive_0001_sync-63-64/: README.md
test-images/2011_09_26_drive_0005_sync-83-84/: README.md
test-images/India/: README.md
